--- a/components/style/themes/variable.scss
+++ b/components/style/themes/variable.scss
@@ -189,7 +189,8 @@
   --menuitem-disabled-color: rgba(0, 0, 0, 0.25);
   --menuitem-divider-bg-color: #e5e5e5;
   --menuitem-horizontal-padding: 20px;
-  --menuitem-horizontal-height: 56px;
+  --menuitem-horizontal-height: 44px;
+  --menuitem-group-color: var(--color-text-caption);
 
   // Tag
   --tag-height-lg: 32px;
