--- a/components/switch/style/index.scss
+++ b/components/switch/style/index.scss
@@ -1,5 +1,5 @@
-@import '../../style/themes/variable';
-@import '../../style/core/index';
+@import "../../style/themes/variable";
+@import "../../style/core/index";
 
 @include b(switch) {
   position: relative;
@@ -8,9 +8,9 @@
   height: var(--switch-height-md);
   vertical-align: middle;
   border-radius: var(--switch-height-md);
-  background-color: var(--background-disabled);
+  background-color: var(--switch-disabled-background);
   cursor: pointer;
-  transition: left .3s cubic-bezier(.78, .14, .15, .86);
+  transition: left 0.3s cubic-bezier(0.78, 0.14, 0.15, 0.86);
   user-select: none;
 
   &:after {
@@ -20,10 +20,10 @@
     left: calc((var(--switch-height-md) - var(--switch-height-md) * 0.7) / 2);
     top: calc((var(--switch-height-md) - var(--switch-height-md) * 0.7) / 2);
     border-radius: 100%;
-    background-color: var(--color-white);
+    background-color: white;
     content: " ";
     cursor: pointer;
-    transition: left .3s cubic-bezier(.78, .14, .15, .86);
+    transition: left 0.3s cubic-bezier(0.78, 0.14, 0.15, 0.86);
   }
 
   @include m(checked) {
@@ -33,10 +33,14 @@
       left: calc(var(--switch-width-md) * 0.625);
     }
     @include e(loading) {
-      display: inline-block;
-      transform: scale(0.5);
-      left: calc(var(--switch-width-md) * 0.5625);
-      position: relative;
+      width: calc(var(--switch-height-md) * 0.7);
+      height: calc(var(--switch-height-md) * 0.7);
+      left: calc(var(--switch-width-md) * 0.625);
+
+      .za-activity-indicator {
+        width: calc(var(--switch-height-md) * 0.7 * 0.8);
+        height: calc(var(--switch-height-md) * 0.7 * 0.8);
+      }
 
       circle {
         stroke: var(--theme-primary) !important;
@@ -74,20 +78,26 @@
 
     @include m(checked) {
       &:after {
-        left: calc(var(--switch-width-sm) * 0.53125);
+        left: calc(var(--switch-width-sm) * 0.54);
       }
 
       @include e(inner) {
+        height: var(--switch-height-sm);
+        width: var(--switch-width-sm);
+        display: flex;
+        align-items: center;
         position: relative;
       }
 
       @include e(loading) {
-        display: inline-block;
-        font-size: 10px;
-        transform: scale(0.4);
-        left: calc(var(--switch-width-sm) * 0.40625);
-        top: calc(var(--switch-height-sm) / -8);
-        position: absolute;
+        width: calc(var(--switch-height-sm) * 0.75);
+        height: calc(var(--switch-height-sm) * 0.75);
+        left: calc(var(--switch-width-sm) * 0.54);
+
+        .za-activity-indicator {
+          width: calc(var(--switch-height-sm) * 0.75 * 0.8);
+          height: calc(var(--switch-height-sm) * 0.75 * 0.8);
+        }
 
         circle {
           stroke: var(--theme-primary) !important;
@@ -97,18 +107,27 @@
     }
 
     @include e(inner) {
-      font-size: 10px;
+      height: var(--switch-height-sm);
+      width: var(--switch-width-sm);
+      display: flex;
+      align-items: center;
       position: relative;
     }
 
     @include e(loading) {
-      display: inline-block;
-      font-size: 10px;
-      transform: scale(0.4);
+      display: flex;
+      justify-content: center;
+      align-items: center;
       position: absolute;
-      top: calc(var(--switch-height-sm) / -8);
-      left: calc(var(--switch-height-sm) / -8);
-      z-index: 2;
+      width: calc(var(--switch-height-sm) * 0.75);
+      height: calc(var(--switch-height-sm) * 0.75);
+      top: calc((var(--switch-height-sm) - var(--switch-height-sm) * 0.75) / 2);
+      left: calc((var(--switch-height-sm) - var(--switch-height-sm) * 0.75) / 2);
+
+      .za-activity-indicator {
+        width: calc(var(--switch-height-sm) * 0.75 * 0.8);
+        height: calc(var(--switch-height-sm) * 0.75 * 0.8);
+      }
 
       circle {
         stroke: var(--switch-disabled-background) !important;
@@ -124,10 +143,20 @@
   }
 
   @include e(loading) {
-    display: inline-block;
-    transform: scale(0.5);
+    display: flex;
+    justify-content: center;
+    align-items: center;
     z-index: 2;
     position: relative;
+    width: calc(var(--switch-height-md) * 0.7);
+    height: calc(var(--switch-height-md) * 0.7);
+    left: calc((var(--switch-height-md) - var(--switch-height-md) * 0.7) / 2);
+    top: calc((var(--switch-height-md) - var(--switch-height-md) * 0.7) / 2);
+
+    .za-activity-indicator {
+      width: calc(var(--switch-height-md) * 0.7 * 0.8);
+      height: calc(var(--switch-height-md) * 0.7 * 0.8);
+    }
 
     circle {
       stroke: #dedede !important;
