--- a/components/switch/style/index.scss
+++ b/components/switch/style/index.scss
@@ -1,5 +1,6 @@
 @import "../../style/themes/variable";
 @import "../../style/core/index";
+// @import 'node_modules/zarm/lib/activity-indicator/style/component.scss';
 
 @include b(switch) {
   position: relative;
