--- a/components/switch/style/index.scss
+++ b/components/switch/style/index.scss
@@ -1,6 +1,6 @@
 @import "../../style/themes/variable";
 @import "../../style/core/index";
-@import 'node_modules/zarm/lib/activity-indicator/style/component.scss';
+@import "node_modules/zarm/lib/activity-indicator/style/component.scss";
 
 @include b(switch) {
   position: relative;
@@ -37,15 +37,15 @@
       width: calc(var(--switch-height-md) * 0.7);
       height: calc(var(--switch-height-md) * 0.7);
       left: calc(var(--switch-width-md) * 0.625);
+      transform: scale(0.8);
 
-      .zw-activity-indicator {
-        width: calc(var(--switch-height-md) * 0.7 * 0.8);
-        height: calc(var(--switch-height-md) * 0.7 * 0.8);
+      @include b(activity-indicator) {
+        width: calc(var(--switch-height-md) * 0.7);
+        height: calc(var(--switch-height-md) * 0.7);
       }
 
       circle {
-        stroke: var(--theme-primary) !important;
-        stroke-width: 10 !important;
+        stroke: var(--theme-primary);
       }
     }
   }
@@ -94,15 +94,15 @@
         width: calc(var(--switch-height-sm) * 0.75);
         height: calc(var(--switch-height-sm) * 0.75);
         left: calc(var(--switch-width-sm) * 0.54);
+        transform: scale(0.8);
 
-        .zw-activity-indicator {
-          width: calc(var(--switch-height-sm) * 0.75 * 0.8);
-          height: calc(var(--switch-height-sm) * 0.75 * 0.8);
+        @include b(activity-indicator) {
+          width: calc(var(--switch-height-sm) * 0.75);
+          height: calc(var(--switch-height-sm) * 0.75);
         }
 
         circle {
-          stroke: var(--theme-primary) !important;
-          stroke-width: 10 !important;
+          stroke: var(--theme-primary);
         }
       }
     }
@@ -124,23 +124,24 @@
       height: calc(var(--switch-height-sm) * 0.75);
       top: calc((var(--switch-height-sm) - var(--switch-height-sm) * 0.75) / 2);
       left: calc((var(--switch-height-sm) - var(--switch-height-sm) * 0.75) / 2);
+      transform: scale(0.8);
 
-      .zw-activity-indicator {
-        width: calc(var(--switch-height-sm) * 0.75 * 0.8);
-        height: calc(var(--switch-height-sm) * 0.75 * 0.8);
+      @include b(activity-indicator) {
+        width: calc(var(--switch-height-sm) * 0.75);
+        height: calc(var(--switch-height-sm) * 0.75);
       }
 
       circle {
-        stroke: var(--switch-disabled-background) !important;
-        stroke-width: 10 !important;
+        stroke: var(--switch-disabled-background);
       }
     }
   }
 
   @include e(inner) {
-    position: absolute;
     color: #fff;
     font-size: 12px;
+    width: var(--switch-width-md);
+    height: var(--switch-height-md);
   }
 
   @include e(loading) {
@@ -153,15 +154,15 @@
     height: calc(var(--switch-height-md) * 0.7);
     left: calc((var(--switch-height-md) - var(--switch-height-md) * 0.7) / 2);
     top: calc((var(--switch-height-md) - var(--switch-height-md) * 0.7) / 2);
+    transform: scale(0.8);
 
-    .zw-activity-indicator {
-      width: calc(var(--switch-height-md) * 0.7 * 0.8);
-      height: calc(var(--switch-height-md) * 0.7 * 0.8);
+    @include b(activity-indicator) {
+      width: calc(var(--switch-height-md) * 0.7);
+      height: calc(var(--switch-height-md) * 0.7);
     }
 
     circle {
-      stroke: #dedede !important;
-      stroke-width: 10 !important;
+      stroke: #dedede;
     }
   }
 }
