--- a/components/loading/style/index.scss
+++ b/components/loading/style/index.scss
@@ -1,4 +1,3 @@
-
 @import '../../style/core/index';
 @import 'node_modules/zarm/lib/activity-indicator/style/component.scss';
 @import "./mixins.scss";
@@ -57,7 +56,7 @@
   @include e(text) {
     font-size: 14px;
     margin: 3px 0;
-    color: var(--loading-text-color);
+    color: var(--color-text-disabled);
   }
 
   @include loading-size(
