--- a/components/tabs/style/component.scss
+++ b/components/tabs/style/component.scss
@@ -13,12 +13,20 @@
     }
 
     &__arrow {
+      text-align: center;
+      cursor: pointer;
+      position: absolute;
       @include b(icon) {
         color: var(--color-text-caption);
         position: absolute;
         top: 50%;
         left: 50%;
         transform: translate(-50%, -50%);
+      }
+
+      &--disabled {
+        cursor: not-allowed;
+        pointer-events: auto;
       }
     }
 
@@ -122,10 +130,7 @@
       &__arrow {
         height: 100%;
         width: 20px;
-        position: absolute;
         top: 0;
-        text-align: center;
-        cursor: pointer;
 
         &--left {
           left: 0;
@@ -139,10 +144,7 @@
       &__nav {
         position: relative;
         display: inline-block;
-
-        &--animated {
-          transition: transform .3s $default-transition;
-        }
+        transition: transform .3s $default-transition;
       }
 
       &__item {
@@ -156,10 +158,7 @@
         bottom: 0;
         width: auto;
         border-bottom: 2px solid var(--tabs-default-line-color);
-
-        &--animated {
-          transition: transform $default-transition;
-        }
+        transition: transform $default-transition;
       }
     }
 
@@ -199,10 +198,7 @@
 
       &__nav {
         position: relative;
-
-        &--animated {
-          transition: transform .3s $default-transition;
-        }
+        transition: transform .3s $default-transition;
       }
 
       &__item {
@@ -223,19 +219,13 @@
         top: 0;
         right: 0;
         border-right: 2px solid var(--tabs-default-line-color);
-
-        &--animated {
-          transition: transform $default-transition;
-        }
+        transition: transform $default-transition;
       }
 
       &__arrow {
         height: 30px;
         width: 100%;
-        position: absolute;
         left: 0;
-        text-align: center;
-        cursor: pointer;
 
         &--top {
           top: 0;
