chore: update css vaiable

--- a/components/style/themes/variable.scss
+++ b/components/style/themes/variable.scss
@@ -11,7 +11,7 @@
   --color-text: #343434; // 基本
   --color-text-inverse: #fff; // 反色
   --color-text-placeholder: #a9a9a9; // 文本框提示
-  --color-text-disabled: #909090; // 失效
+  --color-text-disabled: #bcbcbc; // 失效
   --color-text-caption: #909090; // 辅助描述
   --color-link: var(--theme-primary); // 链接
 
