style: update icon color

--- a/components/style/themes/variable.scss
+++ b/components/style/themes/variable.scss
@@ -261,6 +261,8 @@
   --tabs-default-hover-color: #33c98d;
   --tabs-default-disabled-color: var(--color-text-disabled);
   --tabs-default-icon-color: #bcbcbc;
+  --tabs-default-icon-disabled-color: var(--border-disabled);
+  --tabs-default-icon-hover-color: var(--color-text);
   --tabs-default-active-background: var(--color-text-inverse);
   --tabs-default-line-color: #00bc70;
   --tabs-default-active-color: #00bc70;
