fix: update radio scss

--- a/components/style/themes/variable.scss
+++ b/components/style/themes/variable.scss
@@ -192,6 +192,7 @@
   --radio-padding-v-md: 16px;
   --radio-padding-v-lg: 16px;
   --radio-color: var(--color-text);
+  --radio-hover-color: var(--theme-primary);
   --radio-default-border: #e6e6e6;
   --radio-default-background: #fff;
   --radio-disabled-color: #bcbcbc;
