refactor: refactor switch

--- a/components/style/themes/variable.scss
+++ b/components/style/themes/variable.scss
@@ -270,11 +270,11 @@
   --icon-theme-default: var(--color-text);
 
   //Switch
-  --switch-height-md: 20px;
   --switch-width-md: 48px;
-  --switch-height-sm: 16px;
   --switch-width-sm: 32px;
-  --switch-disabled-background: #dedede;
+  --switch-height-md: 20px;
+  --switch-height-sm: 16px;
+  --switch-background: #bcbcbc;
 
   // Tooltip
   --tooltip-font-size: 12px;
