fix: add test file

--- a/components/dropdown/style/component.scss
+++ b/components/dropdown/style/component.scss
@@ -8,6 +8,7 @@
   text-align: left;
   will-change: transform, opacity;
   margin: 5px 0;
+  z-index: var(--dropdown-popup-index);
 
   @include m(rect) {
     border-radius: 0;
