--- a/components/input/style/index.scss
+++ b/components/input/style/index.scss
@@ -40,134 +40,6 @@
     color: var(--input-placeholder-color);
   }
 
-  @include e(affix-wrapper) {
-    position: relative;
-    display: inline-block;
-    width: 100%;
-    height: 100%;
-    text-align: start;
-    line-height: 1.5;
-    font-size: 14px;
-
-    @include b(input) {
-      position: relative;
-      width: 100%;
-      display: block;
-      text-align: inherit;
-      flex: 1;
-
-      &:not(:last-child) {
-        padding-right: 30px;
-      }
-
-      &:not(:first-child) {
-        padding-left: 30px;
-      }
-    }
-
-    @include e(prefix, suffix) {
-      position: absolute;
-      top: 50%;
-      z-index: 2;
-      display: flex;
-      align-items: center;
-      color: rgba(0, 0, 0, 0.65);
-      line-height: 0;
-      flex-shrink: 0;
-      white-space: nowrap;
-      transform: translateY(-50%);
-    }
-
-    @include e(prefix) {
-      left: 12px;
-    }
-
-    @include e(suffix) {
-      right: 12px;
-    }
-
-    @include e(line) {
-      position: absolute;
-      left: 0;
-      right: 0;
-      bottom: -1px;
-      margin: 0;
-      height: 1px;
-      border: none;
-      background-color: var(--input-default-border-color);
-    }
-
-    @include e(focus-line) {
-      position: absolute;
-      left: 0;
-      right: 0;
-      bottom: -1px;
-      transform: scaleX(0);
-      margin: 0;
-      height: 2px;
-      border: none;
-      background-color: var(--theme-primary);
-      transition: transform 0.25s;
-    }
-
-    @include m(lg) {
-      font-size: var(--input-font-size-lg);
-      @include b(icon) {
-        font-size: var(--input-font-size-lg);
-      }
-    }
-
-    @include m(md) {
-      font-size: var(--input-font-size-md);
-      @include b(icon) {
-        font-size: var(--input-font-size-md);
-      }
-    }
-
-    @include m(sm) {
-      font-size: var(--input-font-size-sm);
-      @include b(icon) {
-        font-size: var(--input-font-size-sm);
-      }
-    }
-
-    @include m(underline) {
-      display: flex;
-      justify-content: flex-start;
-      align-items: center;
-
-      @include b(input) {
-        &:not(:last-child) {
-          padding-right: 12px;
-        }
-
-        &:not(:first-child) {
-          padding-left: 12px;
-        }
-      }
-
-      @include e(prefix, suffix) {
-        position: static;
-        display: flex;
-        align-items: center;
-        color: rgba(0, 0, 0, 0.65);
-        line-height: 0;
-        flex-shrink: 0;
-        white-space: nowrap;
-      }
-    }
-
-    @include e(clear-icon) {
-      cursor: pointer;
-      transition: all 0.3s;
-      color: rgba(0, 0, 0, 0.25);
-
-      &:hover {
-        color: rgba(0, 0, 0, 0.45);
-      }
-    }
-  }
-
   @include m(radius) {
     border-radius: var(--radius-md);
   }
@@ -227,12 +99,6 @@
     }
   }
 
-  @include m(focused) {
-    @include e(focus-line) {
-      transform: scaleX(1) !important;
-    }
-  }
-
   @include m(bordered) {
     &:focus {
       border-color: var(--theme-primary);
@@ -282,10 +148,13 @@
 }
 
 @include b(input-group) {
+  position: relative;
   display: inline-block;
   width: 100%;
   text-align: start;
   vertical-align: top;
+  line-height: 1.5;
+  font-size: 14px;
 
   @include e(wrapper) {
     display: flex;
@@ -300,10 +169,6 @@
       width: 100%;
       margin-bottom: 0;
       text-align: inherit;
-    }
-
-    @include b(icon) {
-      font-size: 14px;
     }
   }
 
@@ -347,6 +212,38 @@
     border-bottom-left-radius: 0;
   }
 
+  @include e(prefix, suffix) {
+    position: absolute;
+    top: 50%;
+    z-index: 2;
+    display: flex;
+    align-items: center;
+    color: rgba(0, 0, 0, 0.65);
+    line-height: 0;
+    flex-shrink: 0;
+    white-space: nowrap;
+    transform: translateY(-50%);
+  }
+
+  @include e(prefix) {
+    left: 12px;
+  }
+
+  @include e(suffix) {
+    right: 12px;
+  }
+
+  @include e(clear-icon) {
+    margin-right: 4px;
+    cursor: pointer;
+    transition: all 0.3s;
+    color: rgba(0, 0, 0, 0.25);
+
+    &:hover {
+      color: rgba(0, 0, 0, 0.45);
+    }
+  }
+
   @include m(radius) {
     @include e(prepend) {
       border-top-left-radius: var(--radius-md);
@@ -356,6 +253,107 @@
     @include e(append) {
       border-top-right-radius: var(--radius-md);
       border-bottom-right-radius: var(--radius-md);
+    }
+  }
+
+  @include m(lg) {
+    @include b(icon) {
+      font-size: var(--input-font-size-lg);
+    }
+  }
+
+  @include m(md) {
+    @include b(icon) {
+      font-size: var(--input-font-size-md);
+    }
+  }
+
+  @include m(sm) {
+    @include b(icon) {
+      font-size: var(--input-font-size-sm);
+    }
+
+    @include e(prefix) {
+      left: 8px;
+    }
+
+    @include e(suffix) {
+      right: 8px;
+    }
+  }
+
+  @include m(focused) {
+    @include e(focus-line) {
+      transform: scaleX(1) !important;
+    }
+  }
+
+  @include m(underline) {
+    @include e(wrapper) {
+      display: flex;
+      position: relative;
+      width: 100%;
+      line-height: 1.5;
+      border-collapse: separate;
+      border-spacing: 0;
+    }
+
+    @include e(prefix, suffix) {
+      position: static;
+      display: flex;
+      align-items: center;
+      color: rgba(0, 0, 0, 0.65);
+      line-height: 0;
+      flex-shrink: 0;
+      white-space: nowrap;
+      transform: translateY(0);
+
+      @include e(clear-icon) {
+        margin-right: 12px;
+        transform: translate(-50%, 0);
+      }
+    }
+
+    @include b(input) {
+      &:not(:last-child) {
+        padding-right: 12px;
+      }
+
+      &:not(:first-child) {
+        padding-left: 12px;
+      }
+    }
+
+    @include b(input) {
+      position: relative;
+      width: 100%;
+      display: block;
+      text-align: inherit;
+      flex: 1;
+    }
+
+    @include e(line) {
+      position: absolute;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      margin: 0;
+      height: 1px;
+      border: none;
+      background-color: var(--input-default-border-color);
+    }
+
+    @include e(focus-line) {
+      position: absolute;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      transform: scaleX(0);
+      margin: 0;
+      height: 2px;
+      border: none;
+      background-color: var(--theme-primary);
+      transition: transform 0.25s;
     }
   }
 }
