--- a/components/style/themes/variable.scss
+++ b/components/style/themes/variable.scss
@@ -191,13 +191,13 @@
   --radio-padding-v-sm: 10px;
   --radio-padding-v-md: 16px;
   --radio-padding-v-lg: 16px;
-  --radio-color: var(--color-text);
   --radio-hover-color: var(--theme-primary);
   --radio-default-border: #e6e6e6;
   --radio-default-background: #fff;
   --radio-disabled-color: #bcbcbc;
   --radio-disabled-border: #e6e6e6;
   --radio-disabled-background: #fafafa;
+  --radio-disabled-checked-background: #f2f2f2;
   --radio-checked-color: var(--theme-primary);
   --radio-checked-border: var(--theme-primary);
   --radio-button-color: #909090;
