--- a/components/alert/style/component.scss
+++ b/components/alert/style/component.scss
@@ -10,6 +10,7 @@
 
   &.ui-alert-sm-icon {
     padding-left: 36px;
+    
     .zw-icon {
       top: 13px;
       left: 16px;
@@ -19,6 +20,7 @@
 
   &.ui-alert-lg-icon {
     padding-left: 76px;
+
     .zw-icon {
       top: 16px;
       left: 20px;
@@ -33,6 +35,7 @@
   &.ui-alert-no-with-description {
     padding-top: 9px;
     padding-bottom: 9px;
+
     .ui-alert-message {
       color: #616161;
       margin-bottom: 0;
@@ -54,7 +57,8 @@
     cursor: pointer;
     transition: color .2s ease;
 
-    &:hover, &:focus {
+    &:hover,
+    &:focus {
       color: #343434;
     }
   }
@@ -74,7 +78,8 @@
     cursor: pointer;
     transition: color .2s ease;
 
-    &:hover, &:focus {
+    &:hover,
+    &:focus {
       color: #343434;
     }
   }
@@ -98,33 +103,33 @@
 }
 
 .ui-alert-success {
-  background: rgba($base-theme-success,0.2);
+  background: rgba($base-theme-success, 0.2);
+
   .zw-icon {
     color: $base-theme-success;
   }
 }
 
 .ui-alert-info {
-  background: rgba($base-theme-info,0.2);
+  background: rgba($base-theme-info, 0.2);
+
   .zw-icon {
     color: $base-theme-info;
   }
 }
 
 .ui-alert-warning {
-  background: rgba($base-theme-warning,0.2);
+  background: rgba($base-theme-warning ,0.2);
+
   .zw-icon {
     color: $base-theme-warning;
   }
 }
 
 .ui-alert-error {
-  background: rgba($base-theme-error,0.2);
+  background: rgba($base-theme-error, 0.2);
+
   .zw-icon {
     color: $base-theme-error;
   }
-}
-
-.ui-alert-close-animation {
-  
 }
